--- a/css/shaarli.css
+++ b/css/shaarli.css
@@ -4228,8 +4228,9 @@ pre {
   right: 22px; }
   .linklist-filters a {
     display: inline-block;
-    margin: 3px 4px;
-    padding: 5px 8px;
+    margin: 0 6px;
+    padding: 2px 8px;
+    font-size: 20px;
     text-decoration: none; }
     .linklist-filters a:hover {
       background-color: #fff; }
@@ -4237,8 +4238,8 @@ pre {
     background: #f5f5f5;
     color: #252525; }
   .linklist-filters .filter-on {
-    background: #b0ddce;
-    color: var(--main-color); }
+    background: #d28314;
+    color: #252525; }
   .linklist-filters .filter-block {
     background: #ac2925;
     color: #f5f5f5; }
@@ -4322,14 +4323,15 @@ pre {
   text-align: center; }
 
 .linklist-item-tags {
-  margin: 1em 0 1em 24px;
+  margin: 1em 0;
   position: relative; }
   .linklist-item-tags .ctrl-checkbox {
-    position: absolute;
-    left: -24px;
+    position: relative;
+    top: 7px;
     margin-right: 8px; }
-  .linklist-item-tags .label-tag {
-    margin-bottom: 12px; }
+    .linklist-item-tags .ctrl-checkbox input[type="checkbox"] {
+      width: 24px;
+      height: 24px; }
 
 h2.linklist-item-title {
   position: relative;
@@ -4483,14 +4485,21 @@ h2.linklist-item-title {
       .linklist-item-infos-controls-item a.fold-button .fa:hover {
         border: 1px solid #0b5ea6; }
 
-.linkqrcode a:before {
-  font-family: "ForkAwesome";
-  content: "\f029";
-  font-size: 24px;
-  padding: 4px 12px; }
+.linkqrcode {
+  display: initial !important;
+  position: initial !important; }
+  .linkqrcode a:before {
+    font-family: "ForkAwesome";
+    content: "\f029";
+    font-size: 24px;
+    padding: 4px 12px; }
+  .linkqrcode a img {
+    display: none; }
 
-.linkqrcode a img {
-  display: none; }
+#permalinkQrcode {
+  width: 240px !important;
+  height: 260px !important;
+  left: calc( 50% - 120px) !important; }
 
 .footer-container {
   margin: 20px 0;
@@ -5002,19 +5011,24 @@ form[name='linkform'].page-form {
   .page-form .submit-buttons .button {
     margin: auto; }
   .subheader-form {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    height: 84px; }
+    height: 104px; }
+    .subheader-form div > div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 12px 8px; }
   .linklist-item {
     padding: 0 1em; }
   .linklist-paging {
-    padding: 0; }
+    padding: 0;
+    min-height: 48px; }
   .linklist-pages span:first-child {
     margin-left: 8px; }
   .linklist-item-infos {
     position: relative;
     top: 6px;
-    right: -16px;
+    right: 16px;
+    min-width: calc( 100% + 32px);
     display: flex;
     justify-content: flex-end; }
   .linklist-filters {
